--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -9,8 +9,8 @@ on:
       - main
 
 env:
-  WEBAPP_NAME: '<your-web-app>'             # Replace with the name of your Azure web app
-  RESOURCE_GROUP: '<your-resource-group>'   # Replace with the name of your Resource Group
+  WEBAPP_NAME: 'something123456'             # Replace with the name of your Azure web app
+  RESOURCE_GROUP: 'AVA_DB'   # Replace with the name of your Resource Group
 
 jobs:
   build-and-test:
